@@ -5,9 +5,8 @@
 
 - testet with JavaFX version 15.0.1, Open JDK Java Version 15.0.1
 
-start command:<br>
-`java --module-path "YOUR_JAVAFX_LIB_PATH" --add-modules javafx.controls,javafx.fxml,javafx.base,javafx.graphics,javafx.media -jar .\PacMan_V.1.2.jar `
-
-Replace Your_JavaFX_Lib_Path with your local javaFX library path.
+To start,configure the run.bat file :
+- Replace Your_JavaFX_Lib_Path with your local javaFX library path
+--> run run.bat
 
 I developed this project during my second semester.
